HYDRAN-2326: Generate BFUS models from OpenAPI spec (contract-first)
Add the BFUS OpenAPI spec at src/main/resources/integrations/api-bfus.yaml and wire
the openapi-generator (models -> generated.se.sundsvall.bfus), matching the convention
used for DataWarehouseReader. The provider types the /Reading/Consumptions response as a
bare object, so the response schema (ConsumptionResponse/ConsumptionContent/
MeterReadingPart/PeriodicValue) is modelled in our copy with additionalProperties for
forward-compatibility with the many extra fields the real response carries.

The hand-written response DTOs and their POJO tests are removed; BfusClient and BfusMapper
now use the generated types. Behaviour is unchanged - all unit and WireMock app tests
(including the historical-quarter, aggregation and span-cutoff cases) stay green.